--- a/index.html
+++ b/index.html
@@ -65,8 +65,7 @@
     </div>
 
     <div class="footer-credit">
-        © Designed By Tanakorn Jennadtee<br>
-        Powered by Gemini 3 Pro
+        © Designed | Tanakorn Jennadtee
     </div>
 
     <script src="script.js"></script>
