--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="th">
 <head>
@@ -19,7 +20,7 @@
         
         <div class="profile-section">
             <div class="profile-img-wrapper">
-                <img src="https://ui-avatars.com/api/?name=Tanakorn&background=667eea&color=fff&size=150" alt="Profile" id="profile-img">
+                <img src="https://ibb.co/ZpvbbRtT" alt="Profile" id="profile-img">
             </div>
             <h1>Tanakorn Jennadtee</h1>
             <p class="bio">Junior Web Developer & Creative Thinker<br>ยินดีต้อนรับสู่พื้นที่ส่วนตัวของผมครับ</p>
