--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         
         <div class="profile-section">
             <div class="profile-img-wrapper">
-                <img src="https://scontent.fhdy4-1.fna.fbcdn.net/v/t39.30808-1/495203970_703707168759486_6667442205608701915_n.jpg?stp=dst-jpg_s120x120_tt6&_nc_cat=101&ccb=1-7&_nc_sid=e99d92&_nc_eui2=AeEbdzny3GG_9dXHptvB4hVZiI7jE761-5iIjuMTvrX7mNUktMauBpyJcqYEFc7_cJd72oAPfljNdLWreq0gH3IA&_nc_ohc=vZ4qrsW6TtkQ7kNvwEOoxYO&_nc_oc=Adlm4UD26f4upm1o2E_eLcbrbfOjWQMkCiUv-hchHjBrpVExzYy4VXwsQN4QnbgdC5g&_nc_zt=24&_nc_ht=scontent.fhdy4-1.fna&_nc_gid=TUgS74WstSPl13Qs3zB1Nw&oh=00_AfioSc2G6AmdYQhQStMpG1o49d5keYWCY8aPK_bJyYH_Rw&oe=6928AB26" alt="Profile" id="profile-img">
+                <img src="https://scontent.fbkk29-1.fna.fbcdn.net/v/t39.30808-6/495203970_703707168759486_6667442205608701915_n.jpg?_nc_cat=101&ccb=1-7&_nc_sid=6ee11a&_nc_eui2=AeEbdzny3GG_9dXHptvB4hVZiI7jE761-5iIjuMTvrX7mNUktMauBpyJcqYEFc7_cJd72oAPfljNdLWreq0gH3IA&_nc_ohc=9iwXyMjYpkIQ7kNvwFaJtC6&_nc_oc=Adkq_OfUqi8i7fM4HxVIAgv3ntbx3UsWhGers956xbjfwvvF5BG5RgWbQqZlu3bUnbE&_nc_zt=23&_nc_ht=scontent.fbkk29-1.fna&_nc_gid=jeZE2MQVFrhrGrs2m_mcyA&oh=00_Afh8V-QQpcXKlFJpO6zq6LwrFzUSwduMY_a_vMDBcZoXuA&oe=692C62E4" alt="Profile" id="profile-img">
             </div>
             <h1>Tanakorn Jennadtee</h1>
             <p class="bio">Junior Web Developer & Creative Thinker<br>ยินดีต้อนรับสู่พื้นที่ส่วนตัวของผมครับ</p>
